--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,11 +29,17 @@ and open the template in the editor.
     vertical-align: middle;
     text-align: center;
 }
+#page_body {
+    margin-top: 140px;
+}
+#page_full {
+    background-color: #f5f5f5;
+}
 #page_header {
-    background-color: white;
+    background-color: #c6bec6;
 }
 #header_top {
-    height: 120px;
+    height: 8.5em;
     position: relative;
     padding-top: 15px;
 }
@@ -41,7 +47,8 @@ and open the template in the editor.
     position: absolute;
 }
 .menu-links {
-    margin-left: 250px;
+    margin-left: 275px;
+    margin-top: 13px;
     top: 0;
     left: 0;
     width: 300px;
@@ -58,7 +65,45 @@ and open the template in the editor.
     margin-left: 7px;
     padding-top: 7px;
     padding-bottom: 7px;
+    text-align: center;
 }
 #header_fixed {
     position: fixed;
+    width: 100%;
+    z-index: 1000;
+}
+.section-home {
+    background-color: #f5f5f5;
+    padding: 2.8em 0;
+}
+.section-features {
+    background-color: #b9d3ee;
+    padding: 2.8em 0;
+}
+.section-pricing {
+    background-color: #68838b;
+    padding: 2.8em 0;
+    color: #ffffff;
+}
+.section-contact_us {
+    background-color: #8b7068;
+    padding: 2.8em 0;
+}
+.section-page-file {
+    padding: 0 0 2.8em 0;
+    line-height: 2em;
+}
+.heading-bold-home {
+    color: #303030;
+    font-size: 24px;
+    font-weight: bold;
+    font-family: "Open Sans", sans-serif;
+}
+.body-large {
+    font-size: 18px;
+    line-height: 36px;
+    font-family: "Open Sans", sans-serif;
+}
+.img-screenshot {
+    height: 14em;
 }
