--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -30,7 +30,7 @@ and open the template in the editor.
     text-align: center;
 }
 #page_body {
-    margin-top: 140px;
+    margin-top: 8em;
 }
 #page_full {
     background-color: #f5f5f5;
@@ -39,7 +39,7 @@ and open the template in the editor.
     background-color: #c6bec6;
 }
 #header_top {
-    height: 8.5em;
+    height: 7.5em;
     position: relative;
     padding-top: 15px;
 }
@@ -73,11 +73,11 @@ and open the template in the editor.
     z-index: 1000;
 }
 .section-home {
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     padding: 2.8em 0;
 }
 .section-features {
-    background-color: #b9d3ee;
+    background-color: #bae5f1;
     padding: 2.8em 0;
 }
 .section-pricing {
