--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,8 +8,8 @@ and open the template in the editor.
 */
 
 .bg-img-pan {
-    background-image: url(images/screenshot-v1.jpeg);
-    background-position: 0 100%;
+    background-image: url(/assets/style/images/screenshot-v1.jpg);
+    background-position: 30% 100%;
     background-color: transparent;
     background-repeat: no-repeat;
     height: 100%;
