--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -93,6 +93,9 @@ and open the template in the editor.
     padding: 0 0 2.8em 0;
     line-height: 2em;
 }
+.heading {
+    margin-bottom: 24px;
+}
 .heading-bold-home {
     color: #303030;
     font-size: 24px;
@@ -106,4 +109,10 @@ and open the template in the editor.
 }
 .img-screenshot {
     height: 14em;
+}
+.text-general {
+    color: #ffffff;
+}
+.plan-form .form-group {
+    margin-bottom: 18px;
 }
