--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -30,7 +30,8 @@ and open the template in the editor.
     text-align: center;
 }
 #page_body {
-    margin-top: 8em;
+    padding-top: 8em;
+    position: relative;
 }
 #page_full {
     background-color: #f5f5f5;
@@ -66,6 +67,10 @@ and open the template in the editor.
     padding-top: 7px;
     padding-bottom: 7px;
     text-align: center;
+    cursor: pointer;
+}
+.menu-links li.list-group-item a:hover {
+    text-decoration: none;
 }
 #header_fixed {
     position: fixed;
