--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,7 +8,7 @@ and open the template in the editor.
 */
 
 .bg-img-pan {
-    background-image: url(/assets/style/images/screenshot-v1.jpg);
+    background-image: url(/assets/style/images/live_screenshots/screenshot-v2-openspace-slide.png);
     background-position: 30% 100%;
     background-color: transparent;
     background-repeat: no-repeat;
