Marketing Video Addition

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -113,7 +113,7 @@ and open the template in the editor.
     color: #ffffff;
 }
 .section-contact_us {
-    background-color: #8b7068;
+    background-color: #ffffff;
     padding: 2.8em 0;
 }
 .section-page-file {
